<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/prefCat"><!--
        <CheckBoxPreference
            android:key="PREF_FULL_SCREEN"
            android:title="@string/screenPref"
            android:summary	="@string/screenPrefSum"
            android:defaultValue="false"
        /> -->
        <CheckBoxPreference 
            android:key="PREF_REUSE"
            android:title="@string/reusePref"
            android:summary="@string/reusePrefSum"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:key="PREF_REPLAY"
            android:title="@string/replayPref"
            android:summary="@string/replayPrefSum"
            android:defaultValue="false"
        />
    </PreferenceCategory>

    <Preference
        android:title="@string/packMgmtPref"
        android:summary="@string/packMgmtPrefSum">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.groganlabs.mishmash"
            android:targetClass="com.groganlabs.mishmash.PackListActivity"
        />
    </Preference>


</PreferenceScreen>